--- a/public/index.html
+++ b/public/index.html
@@ -338,8 +338,8 @@
             <div class="modal-overlay"></div>
             <div class="modal-content intelligent-report-modal">
                 <div class="modal-header">
-                    <h2>Generate Intelligent Health Report</h2>
-                    <button class="modal-close" id="closeReportModal" title="Close">
+                    <h2>Generate Intelligent Customer Monthly Report</h2>
+                    <button class="modal-close" id="closeReportModal" title="Cancel and return to home">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
                         </svg>
